Replace arrow function (es6) with a function call to pass eslint
/src/repo/ReadAloud.js
  53:36  error  Parsing error: Unexpected token >

Change-Id: Iddb9490ae5c18d4606d6c794107a4ed9d644466e
(cherry picked from commit 840a234f762937f14fd687ee1386c244d2ef1b87)

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,5 +4,9 @@
 		"wikimedia/client-es5",
 		"wikimedia/jquery",
 		"wikimedia/mediawiki"
-	]
+	],
+	"rules": {
+		"no-undef": "warn",
+		"no-jquery/no-global-selector": "warn"
+	}
 }
